get2gnow - 00.00.DB.aFF: more shiny!  Default start-up sped up, @ notification fixed, preferences improved, organized, & extended w/two new options.
I've changed get2gnow's gconfig if boolean code so by default URIs only include page titles once a tweet is selected.  This will drastically improve start-up by default.  It does take full advantage of all of the neat-o features get2gnow & won't give quite as good of an impression when get2gnow is 1st started.  But it won't 'pause' or 'seem to freeze' when get2gnow is 1st run so hopefully while it won't appear as impresive it should give a better impression.

I've also stopped get2gnow from including profile URIs when expanding @username links.  I've made this one of my two new get2gnow new preferences so it can be applied to all URIs.  So hyperlinks can have their URIs replaced with the page titles w/o showing the URI as well.

I've also re-organized my preferences dialog so 'Alt+' shortcuts only have one binding so shortcuts activate the preferences.

Lastly I've fixed a glitch with one of my newer features.  So get2gnow now correctly display's a libnotify notification of new tweets where you're @ mentioned the status update.

Committed on: 2009-05-26 @ 08:26:14 AM

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -138,7 +138,7 @@
 			<applyto>/apps/get2gnow/ui/tweets/direct_reply_only</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>false</default>
+			<default>true</default>
 			<locale name="C">
 				<short>How to handle replying to a tweet.</short>
 				<long>
@@ -153,7 +153,7 @@
 			<applyto>/apps/get2gnow/ui/tweets/no_link_in_replies</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>false</default>
+			<default>true</default>
 			<locale name="C">
 				<short>How to format replying to a tweet.</short>
 				<long>
@@ -168,7 +168,7 @@
 			<applyto>/apps/get2gnow/ui/notify</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>false</default>
+			<default>true</default>
 			<locale name="C">
 				<short>Show notification of new Twitter messages</short>
 				<long>Show notification of new Twitter messages.</long>
@@ -195,10 +195,34 @@
 			<applyto>/apps/get2gnow/ui/expand/selected_only</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Expand URLs to include page titles only when a tweet is selected.</short>
+				<long>Expand URLs to include page titles only when a tweet is selected.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/expand/user_profiles</key>
+			<applyto>/apps/get2gnow/ui/expand/user_profiles</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Expand URLs to include user profile titles for @ links.</short>
+				<long>Expand URLs to include user profile titles for @ links.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/expand/replace_with_titles</key>
+			<applyto>/apps/get2gnow/ui/expand/replace_with_titles</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
-				<short>Expand URLs to include paga titles only when a tweet is selected.</short>
-				<long>Expand URLs to include paga titles only when a tweet is selected.</long>
+				<short>Replace hyperlink URLs with page titles without including the URI.</short>
+				<long>Replace hyperlink URLs with page titles without including the URI.</long>
 			</locale>
 		</schema>
 		
@@ -207,7 +231,7 @@
 			<applyto>/apps/get2gnow/ui/sound</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>false</default>
+			<default>true</default>
 			<locale name="C">
 				<short>Sound notification of new Twitter messages</short>
 				<long>Sound notification of new Twitter messages.</long>
