get2gnow #0000DDa09 - googly moogly there's a shit load here
Oh goodness I don't even know where to start.  I've made a ton of progress on get2gnow.  I have several new, and very cool new features & a lot of 'shiny' bits added.

I've been extremely sick & trying to post this commit for 4 days.  I'll detail more of what I've done later, I just really want to get this commit up & available.

Committed on: 2009-06-01 @ 11:03:19 AM

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -13,7 +13,7 @@ gtkbuilder_DATA = 			\
 	services-dialog.ui		\
 	following-viewer.ui		\
 	friends-manager.ui		\
-	main-window.ui			\
+	app.ui				\
 	tweet-view.ui			\
 	popup-dialog.ui			\
 	preferences.ui			\
