--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], [00.00.DB.aFF], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#0000DDa09"], [http://uberChicGeekChick.Com/?projects=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -42,7 +42,6 @@ GTK_MIN_VERSION=2.12.12
 GCONF_MIN_VERSION=1.2.0
 LIBGIO_MIN_VERSION=2.15.5
 LIBCANBERRA_MIN_VERSION=0.4
-LIBGNOMEUI_MIN_VERSION=2.24
 
 dnl -----------------------------------------------------------
 dnl GNOME Keyring
@@ -83,7 +82,6 @@ PKG_CHECK_MODULES(get2gnow,
 	libnotify
 	gnome-vfs-2.0
 	gtk+-2.0 >= $GTK_MIN_VERSION
-	libgnomeui-2.0 > $LIBGNOMEUI_MIN_VERSION
 	glib-2.0 >= $GLIB_MIN_VERSION
 	gio-2.0 >= $LIBGIO_MIN_VERSION
 	libcanberra-gtk >= $LIBCANBERRA_MIN_VERSION
