--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,7 +4,7 @@
 [type: gettext/glade]data/services-dialog.ui
 [type: gettext/glade]data/following-viewer.ui
 [type: gettext/glade]data/friends-manager.ui
-[type: gettext/glade]data/main-window.ui
+[type: gettext/glade]data/app.ui
 [type: gettext/glade]data/popup-dialog.ui
 [type: gettext/glade]data/preferences.ui
 [type: gettext/glade]data/profile-viewer.ui
