get2gnow #0000DDa09 - googly moogly there's a shit load here
Oh goodness I don't even know where to start.  I've made a ton of progress on get2gnow.  I have several new, and very cool new features & a lot of 'shiny' bits added.

To start of with I've finally finished all of my features for get2gnow's multiple account support.  I've added the ablity to delete old accounts, which also cleans up any avatars and the connections cookies file.  get2gnow can saftly have an account deleted even if its active & connected.  I've added a 'New' button as well.  You've never needed to really do anything, but type a server name, to start a new account.  Now its more intuitive & obvious for any one who may have been confused on how to add an account.

I've also finished my 'SoupMessage::restarted' handler so if authentication fails the request is only submitted 5 times, at most, or until authentication is successful.

I've programmed it so if all connections fail to authenticate, i.e. bad username & password, get2gnow will reset its appearance to indicate that it cannot connect.  Than the services' dialog is displayed so you can fix any errors.

I've also completely refactored get2gnow confirmation dialog making it much more extensible & flexible.

Another new feature I've added is back ground monitoring of @ replies/mentions & direct messages.  When you recieve any of them they are display in a notification message, using libnotify.  Direct messages & replies will also be appended to the update list, as they come in.

Direct messages are also formatted to grab your attention, both in the update list and in the notification popup.

I've also extended how get2gnow's stores geometry settings so the position of the veritical slider bar in get2gnow is remeber & restore - even after exiting & starting again.

I've further improved my debug output layer so it no longer runs into any string formatting issues.  Ditto for get2gnow's statusbar printf method.  Other improvements to my debug 

--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -98,8 +98,6 @@
 		</schema>
 		
 		<schema>
-		
-		<schema>
 			<key>/schemas/apps/get2gnow/auth/me@twitter.com/https</key>
 			<applyto>/apps/get2gnow/auth/me@twitter.com/https</applyto>
 			<owner>get2gnow</owner>
@@ -110,6 +108,8 @@
 				<long>Whether to use https or not when connecting to me@identi.ca.</long>
 			</locale>
 		</schema>
+		
+		<schema>
 			<key>/schemas/apps/get2gnow/auth/me@twitter.com/auto_connect</key>
 			<applyto>/apps/get2gnow/auth/me@twitter.com/auto_connect</applyto>
 			<owner>get2gnow</owner>
@@ -269,8 +269,20 @@
 			<type>bool</type>
 			<default>true</default>
 			<locale name="C">
-				<short>Show notification of messages containing @username</short>
-				<long>Show notification of new messages where the user is @ replied to mention.</long>
+				<short>Show notification for new messages containing @username</short>
+				<long>Show notification of new messages where the user is @ replied or mentioned.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/notify_dms</key>
+			<applyto>/apps/get2gnow/ui/notify_at_dms</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Show notification of direct messages</short>
+				<long>Show notification of new direct messages sent directly to you.</long>
 			</locale>
 		</schema>
 		
@@ -303,12 +315,30 @@
 			<applyto>/apps/get2gnow/hints/close_main_window</applyto>
 			<owner>get2gnow</owner>
 			<type>bool</type>
-			<default>true</default>
+			<default>false</default>
 			<locale name="C">
-				<short>Show hint about closing the main window</short>
+				<short>Confirm closing the main window</short>
 				<long>
 					Whether or not to show the message dialog about
 					closing the main window with the 'x' button in the
+					actually exiting, instead of 'hiding', it until
+					with the tray icon.  This prompt is shown when no
+					tray icon exist to use to restore the windows.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/hints/hide_main_window</key>
+			<applyto>/apps/get2gnow/hints/hide_main_window</applyto>
+			<owner>get2gnow</owner>
+			<type>bool</type>
+			<default>false</default>
+			<locale name="C">
+				<short>Confirm hiding the main window</short>
+				<long>
+					Whether or not to show the message dialog about
+					hiding the main window with the 'x' button in the
 					title bar not actually exiting, but instead 'hiding'
 					it until the tray icon is used to restore or quit the program.
 				</long>
@@ -360,6 +390,18 @@
 			<locale name="C">
 				<short>Embed view Y position</short>
 				<long>Embed view Y position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/get2gnow/ui/positions/vpaned_tweet_view</key>
+			<applyto>/apps/get2gnow/ui/positions/vpaned_tweet_view</applyto>
+			<owner>get2gnow</owner>
+			<type>int</type>
+			<default>25</default>
+			<locale name="C">
+				<short>Tweet View's vertical slider bar's position</short>
+				<long>Tweet View's vertical slider bar's position.</long>
 			</locale>
 		</schema>
 		
