--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -47,69 +47,74 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 @HAVE_GNOME_KEYRING_TRUE@keyring_sources = keyring.c keyring.h
-get2gnow_SOURCES =					\
-	gconfig.c		gconfig.h		\
-	debug.c			debug.h			\
-	cache.c			cache.h			\
-	gtkbuilder.c		gtkbuilder.h		\
-	tree-view.c 		tree-view.h		\
-	$(keyring_sources)				\
-	program.c		program.h		\
-	main.c			main.h			\
-	about.c			about.h			\
-	services-dialog.c	services-dialog.h	\
-	profile-viewer.c	profile-viewer.h	\
-	popup-dialog.c		popup-dialog.h		\
-	ipc.c			ipc.h			\
-	app.c			app.h			\
-	geometry.c		geometry.h		\
-	confirm.c		confirm.h		\
-	label.c			label.h			\
-	online-services.c	online-services.h	\
-	network.c		network.h		\
-	timer.c			timer.h			\
-	parser.c		parser.h		\
-	preferences.c		preferences.h		\
-	ui-utils.c		ui-utils.h		\
-	following-viewer.c	following-viewer.h	\
-	friends-manager.c	friends-manager.h	\
-	images.c		images.h		\
-	users.c			users.h			\
-	tweet-view.c		tweet-view.h		\
-	tweets.c		tweets.h		\
-	tweet-list.c		tweet-list.h
+get2gnow_SOURCES =							\
+	program.			program.h			\
+	main.c				main.h				\
+	online-services.c		online-services.h		\
+	online-service.c		online-service.h		\
+	online-service-wrapper.c	online-service-wrapper.h	\
+	network.c			network.h			\
+	timer.c				timer.h				\
+	proxy.c				proxy.h				\
+	gconfig.c			gconfig.h			\
+	debug.c				debug.h				\
+	cache.c				cache.h				\
+	gtkbuilder.c			gtkbuilder.h			\
+	tree-view.c 			tree-view.h			\
+	about.c				about.h				\
+	services-dialog.c		services-dialog.h		\
+	profile-viewer.c		profile-viewer.h		\
+	popup-dialog.c 			popup-dialog.h			\
+	ipc.c				ipc.h				\
+	app.c				app.h				\
+	geometry.c			geometry.h			\
+	confirm.c			confirm.h			\
+	label.c				label.h				\
+	parser.c			parser.h			\
+	preferences.c			preferences.h			\
+	ui-utils.c			ui-utils.h			\
+	following-viewer.c		following-viewer.h		\
+	friend-manager.c		friend-manager.h		\
+	tweet-view.c			tweet-view.h			\
+	tweets.c			tweets.h			\
+	users.c				users.h				\
+	images.c			images.h			\
+	tweet-list.c			tweet-list.h
 
 @HAVE_GNOME_KEYRING_TRUE@am__objects_1 = keyring.$(OBJEXT)
-get2gnow_OBJECTS =				\
-	gconfig.$(OBJEXT)			\
-	debug.$(OBJEXT)				\
-	cache.$(OBJEXT)				\
-	gtkbuilder.$(OBJEXT)			\
-	tree-view.$(OBJEXT)			\
-	$(am__objects_1)			\
+get2gnow_OBJECTS =					\
+	online-services.$(OBJEXT)			\
+	online-service.$(OBJEXT)			\
+	online-service-wrapper.$(OBJEXT)		\
+	network.$(OBJEXT)				\
+	gconfig.$(OBJEXT)				\
+	timer.$(OBJEXT)					\
+	proxy.$(OBJEXT)					\
+	debug.$(OBJEXT)					\
+	cache.$(OBJEXT)					\
+	gtkbuilder.$(OBJEXT)				\
+	tree-view.$(OBJEXT)				\
+	$(am__objects_1)				\
 	program.$(OBJEXT)				\
-	main.$(OBJEXT)				\
-	about.$(OBJEXT)				\
-	services-dialog.$(OBJEXT)		\
-	profile-viewer.$(OBJEXT)		\
-	popup-dialog.$(OBJEXT)			\
-	ipc.$(OBJEXT)				\
-	app.$(OBJEXT)				\
-	geometry.$(OBJEXT)			\
+	main.$(OBJEXT)					\
+	about.$(OBJEXT)					\
+	services-dialog.$(OBJEXT)			\
+	profile-viewer.$(OBJEXT)			\
+	popup-dialog.$(OBJEXT)				\
+	ipc.$(OBJEXT)					\
+	app.$(OBJEXT)					\
+	geometry.$(OBJEXT)				\
 	confirm.$(OBJEXT)				\
-	label.$(OBJEXT)				\
-	timer.$(OBJEXT)				\
-	parser.$(OBJEXT)			\
-	online-services.$(OBJEXT)		\
-	network.$(OBJEXT)			\
-	preferences.$(OBJEXT)			\
-	ui-utils.$(OBJEXT)			\
-	following-viewer.$(OBJEXT)		\
-	friends-manager.$(OBJEXT)		\
-	users.$(OBJEXT)				\
-	images.$(OBJEXT)			\
-	tweet-view.$(OBJEXT)			\
-	tweets.$(OBJEXT)			\
+	label.$(OBJEXT)					\
+	parser.$(OBJEXT)				\
+	preferences.$(OBJEXT)				\
+	ui-utils.$(OBJEXT)				\
+	following-viewer.$(OBJEXT)			\
+	friends-manager.$(OBJEXT)			\
+	users.$(OBJEXT)					\
+	images.$(OBJEXT)				\
+	tweet-view.$(OBJEXT)				\
+	tweets.$(OBJEXT)				\
 	tweet-list.$(OBJEXT)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -390,6 +395,12 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-services.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-service-wrapper.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/timer.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/proxy.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cache.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about.Po@am__quote@
@@ -404,8 +415,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/label.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/friends-manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/followers-dialog.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/network.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/online-services.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/parser.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/preferences.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/users.Po@am__quote@
