get2gnow 0000DDaAB - Lots of shiny, reoganizing, modulation, & tons of improvement.
I've continues to drastically improve my multiple account support.  Included in this commit is vastly improved downloading & handling of Friends & Follows.  I've also added a 'Connect' button to the services dialog.  This is mainly for connecting to an account which isn't setup to auto-connect.  It can also be used to test any new accounts or to add an account for a single session.  Just don't press 'ok' or 'save' to close the services dialog, just click close.  I still have some improvements I need to add to complete this feature - so when using it to 'test' accounts your results may vary.

I've also finally taken the time to add the user's last tweet to my profile viewer.  This makes it much easier to avoid following spasmers & to stop following those who are no longer updating.

I've added a ton of other improvements, cleaned-up a ton, & added a few shiny bits.  I'd write more but I'm off to my Dr's apt, after getting food poisioning & being sick for my last 3 days.

Now watch a sleep deprived gimpgirl rush to get ready.

Committed on: 2009-06-04 @ 06:27:24 AM

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,7 @@ get2gnow_SOURCES = 							\
 	online-services.c		online-services.h		\
 	online-service.c		online-service.h		\
 	online-service-wrapper.c	online-service-wrapper.h	\
+	users-glists.c			users-glists.h			\
 	network.c			network.h			\
 	timer.c				timer.h				\
 	proxy.c				proxy.h				\
