get2gnow #0000DDaC4 - *tick-tock*...get ready, get set, go!
Alrighty about time, yes, I've had time to focus on working on get2gnow, starting with a 'from scratch' setup.  Yep, I nuked everything & did a fresh install, fixed this - tweaked that - rewrote another thing.  Than I did it all over again, and again, and again.

So I've gotten to the route of a ton problems & random issues.  Now for starters, new accounts can be created, deleted, connected to, & fiddled with pretty much all you want.  You may get gtk to toss some assert messages to the console but just try & crash it...I dare you ;-)

I'm not trying to come off as arrogant, only demonstrating that I've fixed a ton today.  Though that by no way means I can promise 'every things' fixed - just a crap load.

Several issues with creating new accounts have been fixed.  Some where some issues with the ServiceDialog buttons acting weird, others where causing incorrect disconnections, & just random weirdness.

I've also done a ton of work to finish my work on my new 'Connect' button & feature.  That said its not working all of the time, especially not with 'unsaved' accounts, so to avoid previous confusions, I've just 'hidden' the button for now, until I have it working under all possible situations, better to avoid confussion than to expect or even hope any of this ever get's ready by any one.

I also completely rewrote my primary gconfig method, namely, 'gconfig_if_bool'.  So it now correctly loads & sets default values even if the default scheme has not been installed yet.  This will mean a much faster start-up & lower memory foot print for any one who hasn't tweaked their preferences.

I've also completely refactored my background monitoring of DMs & @ replies & they're all working correctly again & much faster than before.  I'm going to be doing a complete reworking of how get2gnow processes timelines.  I've extended it long past its original implementation & now the code I 'inherited' is more 'in the way' & b

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -19,9 +19,9 @@ pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
-install_sh_DATA = $(install_sh) -c -m 644
-install_sh_PROGRAM = $(install_sh) -c
-install_sh_SCRIPT = $(install_sh) -c
+install_sh_DATA = $(install_sh) -m 644
+install_sh_PROGRAM = $(install_sh)
+install_sh_SCRIPT = $(install_sh)
 INSTALL_HEADER = $(INSTALL_DATA)
 transform = $(program_transform_name)
 NORMAL_INSTALL = :
@@ -69,7 +69,6 @@ get2gnow_SOURCES =							\
 	ipc.c				ipc.h				\
 	app.c				app.h				\
 	geometry.c			geometry.h			\
-	confirm.c			confirm.h			\
 	label.c				label.h				\
 	parser.c			parser.h			\
 	preferences.c			preferences.h			\
@@ -106,7 +105,6 @@ get2gnow_OBJECTS =					\
 	ipc.$(OBJEXT)					\
 	app.$(OBJEXT)					\
 	geometry.$(OBJEXT)				\
-	confirm.$(OBJEXT)				\
 	label.$(OBJEXT)					\
 	parser.$(OBJEXT)				\
 	preferences.$(OBJEXT)				\
@@ -414,7 +412,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/app.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/geometry.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gtkbuilder.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/confirm.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/label.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/friends-manager.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/followers-dialog.Po@am__quote@
