get2gnow #0000F6aEC - nows things get fun.
Oh goodness where do I begin...well I'll start by saying I've taken get2gnow to the next level.  I've completely refactored...well almost every thing.

My biggest change is that I've made everything fully OO w/some AO aspects as well.  I've drasticlly improved get2gnow's preformance.

My most noticable change is my rewrite of get2gnow's tweet-list viewer.  get2gnow now supports tabs for each timeline & will auto-matically handle monitoring the timelines.

There's alot here & it all kicks ass...sadly I'm sick again so my detailed write-up will have to wait, except to say that get2gnow is getting to a stage where its truly cool.

Now I'm gonna try to stop shaking, spasming, and crying.  I hope others have fun with get2gnom & I'd love any feed back.

Committed on: 2009-06-18 @ 04:52:22 PM

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -9,15 +9,16 @@ schemas_DATA 	 = $(schemas_in_files:.schemas.in=.schemas)
 @INTLTOOL_SCHEMAS_RULE@
 
 gtkbuilderdir = $(datadir)/get2gnow
-gtkbuilder_DATA = 			\
-	services-dialog.ui		\
-	following-viewer.ui		\
-	friends-manager.ui		\
-	app.ui				\
-	tweet-view.ui			\
-	popup-dialog.ui			\
-	preferences.ui			\
-	profile-viewer.ui
+gtkbuilder_DATA = 				\
+	online-services-dialog.ui		\
+	following-viewer.ui			\
+	friends-manager.ui			\
+	main-window.ui				\
+	tweet-list.ui				\
+	tweet-view.ui				\
+	online-services-request-popup.ui	\
+	preferences.ui				\
+	user-profile-viewer.ui
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = get2gnow.svg
