--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -244,15 +244,16 @@ schemasdir = $(GCONF_SCHEMA_FILE_DIR)
 schemas_in_files = get2gnow.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
 gtkbuilderdir = $(datadir)/get2gnow
-gtkbuilder_DATA = 			\
-	services-dialog.ui		\
-	following-viewer.ui		\
-	friends-manager.ui		\
-	app.ui				\
-	tweet-view.ui			\
-	popup-dialog.ui			\
-	preferences.ui			\
-	profile-viewer.ui
+gtkbuilder_DATA = 				\
+	online-services-dialog.ui		\
+	following-viewer.ui			\
+	friends-manager.ui			\
+	main-window.ui				\
+	tweet-list.ui				\
+	tweet-view.ui				\
+	online-services-request-popup.ui	\
+	preferences.ui				\
+	user-profile-viewer.ui
 
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = get2gnow.svg
