get2gnow - 0000F6.aEC update:  kick-ass speed update!
I've just finished several improvements.  I've fixed a problem with notification where it was only notifying you of one new status per account.  Now get2gnow is once again creating notifications for all new updates, based on your settings of course.

I also revamped get2gnow's 'RateLimitTimer' so it now takes into account the over all time elapsed between each request.  So get2gnow runs much quicner during normal usage while still keeping get2gnow from being locked out while making multiple requests.  Multiple requests are only a huge issue when downloading friends & followers.

Though this really isn't as much of an issue as it used to be.  I've avoided running into Twitter, or any service's, RateLimit by replacing libsoup's general callback by creating my own replacement for 'SoupCallbackFunc': 'OnlineServiceSoupSessionCallbackFunc'.  Functions of this type allow soup session callbacks to return a 'void *', aka a gpointer, to another new callback function now callback func 'OnlineServiceSoupSessionCallbackReturnProcessorFunc'.  This makes processing requests much more efficiant and powerful.  And opens up a world of possiblities.

These functions are just one of my many new features I'd previously mentioned of having implemented.  I just didn't feel well enough to write about at them all at the time.  There are still others I have yet to write about in detail & I can't write about them all now.  I'll eventually cover all of my new features.

I meant when I said, in my previous commit: here's when things get fun.

On a personal note - I got distracted for several hours.  I was refactoring my code a lot...to fit what I've learned are most common practices...but it killed my art.  So after 3-4hrs of working on all of it.  I did a 'git reset --hard' and followed my art - instead of others.  For me this is *uber-huge!* which I know no one know's me enough to appriciate but it is truly empowering.

I kick ass & so do

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -48,6 +48,7 @@ binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 @HAVE_GNOME_KEYRING_TRUE@keyring_sources = keyring.c keyring.h
 get2gnow_SOURCES =			online-services-typedefs.h	\
+	$(keyring_sources)						\
 	program.c			program.h			\
 	main.c				main.h				\
 	online-services.c		online-services.h		\
